# toasty-mgr

./: .gitignore  Cargo.toml  README.md
.agents/skills/design/: SKILL.md
.agents/skills/prose/: SKILL.md
.agents/skills/sync-docs/: SKILL.md
.agents/skills/write-tests/: SKILL.md
docs/: README.md
docs/design/: query-spec-macro.md
docs/guide/: book.toml
docs/guide/src/: SUMMARY.md  api-reference.md  application-integration.md  architecture.md  catalog.md  complete-example.md  introduction.md  operations.md  testing.md  transactions.md
docs/templates/: application.rs  bootstrap.rs  design.md  local-database-test.rs
src/: base_ds.rs  ext.rs  lib.rs  query.rs  registry.rs  transaction.rs
tests/: doc_templates.rs  local_databases.rs  query_spec.rs  sqlite_manager.rs  turso_manager.rs
toasty-mgr-macros/: Cargo.toml
toasty-mgr-macros/src/: lib.rs  query_spec.rs  tc_query.rs
