[package]
name = "toasty-mgr"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Multi-data-source manager for Toasty backed by a built-in base_ds model"

[workspace]
members = ["toasty-mgr-macros"]
resolver = "2"

[dependencies]
anyhow = "1"
bon = "3.9"
pastey = "0.2.3"
tokio = { version = "1", features = ["sync"] }
toasty = "0.8.0"
toasty-mgr-macros = {version="0.1.0", path = "toasty-mgr-macros" }
tracing = "0.1"
url = "2.5"
[patch.crates-io]
toasty = {git="https://github.com/tokio-rs/toasty.git",branch="main"}
[features]
default = []
mysql = ["toasty/mysql"]
postgresql = ["toasty/postgresql"]
sqlite = ["toasty/sqlite"]
turso = ["toasty/turso"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
